vlib/v/checker/tests/option_map_or_unwrap_alias_ptr_source_err.vv
// A `type Ref = &Category` receiver is a pointer once unaliased, so or-unwrapping
// an option map through it can still alias storage mutated through the original
// owner. The immutable-source exemption from issue #27867 must unalias types
// before its pointer check, so an alias-to-pointer receiver keeps the map-copy
// guard just like a plain `&Category` receiver.
struct Category {
mut:
	translations ?map[string]int
}

type CategoryRef = &Category

fn main() {
	mut c := Category{
		translations: {
			'x': 1
		}
	}
	p := CategoryRef(&c)
	x := p.translations or { panic('missing') }
	c.translations?['x'] = 2
	println(x)
}
